# controllers/user.js
@@ -8,7 +8,7 @@ const ObjectId = require('mongodb').ObjectId;
 //----------------------------------- User
 // -------------------------------------------getAllUsers - Return all Users Collection
 const getAllUsers = async (req, res, next) => {
-    const result = await dbConnect.getDb().db().collection('users').find();
+    const result = await dbConnect.getDb().db('BOM').collection('users').find();
 
     result.toArray((err, users) => {
         if(err) {
@@ -35,7 +35,7 @@ const postUser = async (req, res, next) => {
         img: req.body.img
     };
 
-    const result = await dbConnect.getDb().db().collection('users').insterOne(newUser);
+    const result = await dbConnect.getDb().db('BOM').collection('users').insterOne(newUser);
     if (result.acknowledged) {
         res.status(200).json(result);
     } else {
@@ -60,7 +60,7 @@ const putUser = async (req, res, next) => {
         img: req.body.img
     };
 
-    const result = await dbConnect.getDb().db().collection('users').replaceOne({_id: id}, updateUser);
+    const result = await dbConnect.getDb().db('BOM').collection('users').replaceOne({_id: id}, updateUser);
     if (result.acknowledged) {
         res.status(201).json(result);
     } else {
@@ -73,7 +73,7 @@ const putUser = async (req, res, next) => {
 const getUserId = async (req, res, next) => {
     const id = new ObjectId(req.params.id);
     
-    const result = await dbConnect.getDb().db().collection('users').findOne(id);
+    const result = await dbConnect.getDb().db('BOM').collection('users').findOne(id);
     if (result.acknowledged) {
         res.status(202).json(result);
     } else {
@@ -85,7 +85,7 @@ const getUserId = async (req, res, next) => {
 // deleteUserId - Delete individual user by ID
 const deleteUserId = async (req, res, next) => {
     const id = new ObjectId(req.params.id);
-    const result = await dbConnect.getDb().db().collection('users').deleteOne(id);
+    const result = await dbConnect.getDb().db('BOM').collection('users').deleteOne(id);
 
     if (result.acknowledged) {
         res.status(203).json(result);
@@ -99,7 +99,8 @@ const deleteUserId = async (req, res, next) => {
 const getUsername = async (req, res, next) => {
     const username = new ObjectId(req.params.username);
 
-    const result = await dbConnect.getDb.db().collection('users').findOne(username);
+    const result = await dbConnect.getDb.db('BOM').collection('users').findOne(username);
+    console.log(result);
 
     if (result.acknowledged) {
         res.status(204).json(result);
@@ -127,7 +128,7 @@ const putUsername = async (req, res, next) => {
         img: req.body.img
     };
 
-    const result = await dbConnect.getDb().db().collection('users').replaceOne({_id: id}, {username: username}, updateUser);
+    const result = await dbConnect.getDb().db('BOM').collection('users').replaceOne({_id: id}, {username: username}, updateUser);
     
     if (result.acknowledged) {
         res.status(205).json(result);
@@ -141,7 +142,7 @@ const putUsername = async (req, res, next) => {
 const deleteUsername = async (req, res, next) => {
     const username = new ObjectId(req.params.username);
 
-    const result = await dbConnect.getDb().db().collection('users').replaceOne(username);
+    const result = await dbConnect.getDb().db('BOM').collection('users').replaceOne(username);
      
     if (result.acknowledged) {
         res.status(206).json(result);
